Add getting particular article to api
